crates/runtime/tests/mobile/snapshots/mobile_tool_list_snapshot__mobile_tool_list.snap
---
source: apps/engine-mobile/tests/mobile_tool_list_snapshot.rs
assertion_line: 55
expression: names
---
- AskUserQuestion
- Config
- CronCreate
- CronDelete
- CronList
- Edit
- EnterPlanMode
- ExitPlanMode
- Glob
- Grep
- LSP
- ListAgents
- NotebookEdit
- ObserverReport
- PushNotification
- Read
- RemoteTrigger
- ReportFindings
- ScheduleWakeup
- SendMessage
- SendUserMessage
- Skill
- Sleep
- StructuredOutput
- TaskCreate
- TaskGet
- TaskList
- TaskOutput
- TaskStop
- TaskUpdate
- TodoWrite
- ToolSearch
- WebFetch
- WebSearch
- Write
- speech
- voice
